fix minor bugs and replace swagger docker by a python package

--- a/.envdefault
+++ b/.envdefault
@@ -1,7 +1,3 @@
 AM_PATH=/path/to/acoustic/models/dir
 LM_PATH=/path/to/language/models/dir
-WORKER_PORT=8888
-SERVICE_PORT=2000
-
-SWAGGER_PATH=./document
-SWAGGER_JSON=/app/swagger/swagger.yml
+SWAGGER_PATH=/path/to/swagger/file
