--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   stt-worker:
     container_name: stt-standalone-worker
     build: .
-    image: lintoai/linto-platform-stt-standalone-worker:latest
+    image: lintoai/linto-platform-stt-standalone-worker:latest-unstable
     volumes:
       - ${AM_PATH}:/opt/models/AM
       - ${LM_PATH}:/opt/models/LM
