--- a/.envdefault
+++ b/.envdefault
@@ -1,3 +1,3 @@
 AM_PATH=/path/to/acoustic/models/dir
 LM_PATH=/path/to/language/models/dir
-SWAGGER_PATH=/path/to/swagger/file
+SWAGGER_PATH=./document/swagger.yml
