--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ numpy>=1.18.5
 flask>=1.1.2
 flask-cors>=3.0.10
 flask-swagger-ui>=3.36.0
+flask-sock
 gunicorn
 pyyaml>=5.4.1
 wavio>=0.0.4
 requests>=2.26.0
+websockets
