--- a/.envdefault
+++ b/.envdefault
@@ -1,17 +1,12 @@
 # SERVING PARAMETERS
 SERVICE_MODE=http
-MODEL_TYPE=lin
-
-# HTTP PARAMETERS
-ENABLE_STREAMING=true
+MODEL_TYPE=/opt/model.pt
+LANGUAGE=fr
 
 # TASK PARAMETERS
 SERVICE_NAME=stt
 SERVICES_BROKER=redis://192.168.0.1:6379
 BROKER_PASS=password
-
-# WEBSOCKET PARAMETERS
-STREAMING_PORT=80
 
 # CONCURRENCY
 CONCURRENCY=2
