--- a/.envdefault
+++ b/.envdefault
@@ -1,6 +1,7 @@
 # SERVING PARAMETERS
 SERVICE_MODE=http
 MODEL=/opt/model.pt
+#ALIGNMENT_MODEL=/opt/linSTT_speechbrain_fr-FR_v1.0.0
 LANGUAGE=fr
 
 # TASK PARAMETERS
