integrate another approach to get word timestamps from Whisper transcription, based on cross-attention weights (no need to wav2vec model)

--- a/.envdefault
+++ b/.envdefault
@@ -1,9 +1,11 @@
 # SERVING PARAMETERS
 SERVICE_MODE=http
-LANGUAGE=fr
+STT_LANGUAGE=fr
 MODEL=/opt/model.pt
-#ALIGNMENT_MODEL=/opt/alignment_model
 #DEVICE=cuda:0
+#ALIGNMENT_MODEL=fr
+#ALIGNMENT_MODEL=wav2vec
+#ALIGNMENT_MODEL=/opt/alignment_model
 
 # TASK PARAMETERS
 SERVICE_NAME=stt
