add support of faster_whisper

--- a/Dockerfile.ctranslate2
+++ b/Dockerfile.ctranslate2
@@ -24,8 +24,8 @@ RUN apt-get update && \
 RUN rm -rf /var/lib/apt/lists/*
 
 # Install python dependencies
-COPY requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt && rm requirements.txt
+COPY requirements.ctranslate2.txt ./
+RUN pip install --no-cache-dir -r requirements.ctranslate2.txt && rm requirements.ctranslate2.txt
 
 WORKDIR /usr/src/app
 
