Isolate what is specific to Whisper in a folder

--- a/whisper/Dockerfile.ctranslate2
+++ b/whisper/Dockerfile.ctranslate2
@@ -4,17 +4,17 @@ LABEL maintainer="jlouradour@linagora.com"
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends ffmpeg git
 
 # Install python dependencies
-COPY requirements.ctranslate2.txt ./
+COPY whisper/requirements.ctranslate2.txt ./
 RUN pip install --no-cache-dir -r requirements.ctranslate2.txt && rm requirements.ctranslate2.txt
 
 WORKDIR /usr/src/app
 
-COPY stt /usr/src/app/stt
 COPY celery_app /usr/src/app/celery_app
 COPY http_server /usr/src/app/http_server
 COPY websocket /usr/src/app/websocket
 COPY document /usr/src/app/document
-COPY docker-entrypoint.sh wait-for-it.sh healthcheck.sh ./
+COPY whisper/stt /usr/src/app/stt
+COPY whisper/docker-entrypoint.sh wait-for-it.sh healthcheck.sh ./
 
 ENV PYTHONPATH="${PYTHONPATH}:/usr/src/app/stt"
 
