--- a/whisper/requirements.ctranslate2.txt
+++ b/whisper/requirements.ctranslate2.txt
@@ -2,7 +2,7 @@ celery[redis,auth,msgpack]>=4.4.7
 flask>=1.1.2
 flask-cors>=3.0.10
 flask-sock
-flask-swagger-ui>=3.36.0
+flask-swagger-ui==3.36.0
 gevent
 gunicorn
 lockfile
