--- a/whisper/requirements.ctranslate2.txt
+++ b/whisper/requirements.ctranslate2.txt
@@ -10,6 +10,6 @@ pyyaml>=5.4.1
 requests>=2.26.0
 wavio>=0.0.4
 websockets
-#faster_whisper==0.10.0
-# This is version faster_whisper==0.9.0 + prompt propagation + fix for large-v3
-git+https://github.com/linto-ai/faster-whisper.git@aad9e7508b528e79be2a9975ac79ef8317f02a6d
+#faster_whisper==1.0.1
+# This is version faster_whisper==1.0.1 + option for (persistent) prompt + fix for large-v3
+git+https://github.com/linto-ai/faster-whisper.git@12170de5e63388840f37beea6f8262e5f8352546
