--- a/whisper/.envdefault
+++ b/whisper/.envdefault
@@ -40,7 +40,7 @@ PROMPT=
 # CUDA_VISIBLE_DEVICES=0
 
 # Number of threads per worker when running on CPU
-OMP_NUM_THREADS=4
+NUM_THREADS=4
 
 # Number of workers
 CONCURRENCY=2
