--- a/whisper/.envdefault
+++ b/whisper/.envdefault
@@ -1,7 +1,7 @@
 ############################################
 # SERVING PARAMETERS
 ############################################
-# "http" or "task"
+# "http" or "task" or "websocket"
 SERVICE_MODE=http
 
 # Below: used when SERVICE_MODE=task
@@ -44,3 +44,11 @@ NUM_THREADS=4
 
 # Number of workers
 CONCURRENCY=2
+
+# WEBSOCKET PARAMETERS
+STREAMING_PORT=80
+
+# HTTP PARAMETERS
+ENABLE_STREAMING=true
+
+USE_VAD=auditok
