--- a/whisper/Dockerfile.torch
+++ b/whisper/Dockerfile.torch
@@ -15,6 +15,7 @@ COPY websocket /usr/src/app/websocket
 COPY document /usr/src/app/document
 COPY whisper/stt /usr/src/app/stt
 COPY whisper/docker-entrypoint.sh wait-for-it.sh healthcheck.sh ./
+COPY test/bonjour.wav /usr/src/app/test/bonjour.wav
 
 ENV PYTHONPATH="${PYTHONPATH}:/usr/src/app/stt"
 
