fix kaldi task mode + convert test.sh to test.py + add kaldi test

--- a/kaldi/.envdefault
+++ b/kaldi/.envdefault
@@ -7,8 +7,8 @@ ENABLE_STREAMING=true
 
 # TASK PARAMETERS
 SERVICE_NAME=stt
-SERVICES_BROKER=redis://192.168.0.1:6379
-BROKER_PASS=password
+SERVICES_BROKER=redis://172.17.0.1:6379
+BROKER_PASS=
 
 # WEBSOCKET PARAMETERS
 STREAMING_PORT=80
