--- a/whisper/.envdefault
+++ b/whisper/.envdefault
@@ -49,6 +49,8 @@ PROMPT=
 # STREAMING_MIN_CHUNK_SIZE=26       # Minimum size of the buffer before transcribing
 # STREAMING_BUFFER_TRIMMING_SEC=5   # Maximum targeted size of the buffer after a transcription
 
+# USE_ACCURATE=true       # Use more expensive parameters that will slow down transcription but for better accuracy
+
 ############################################
 # EFFICIENCY PARAMETERS
 ############################################
