--- a/whisper/Dockerfile.ctranslate2.cpu
+++ b/whisper/Dockerfile.ctranslate2.cpu
@@ -1,5 +1,5 @@
 FROM python:3.9
-LABEL maintainer="contact@linto.ai, jlouradour@linagora.com, dgaynullin@linagora.com"
+LABEL maintainer="contact@linto.ai, jlouradour@linagora.com, abert@linagora.com"
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends ffmpeg git
 
