fix #58 : add curl in docker
Signed-off-by: AudranBert <bert.audran@gmail.com>

--- a/kaldi/Dockerfile
+++ b/kaldi/Dockerfile
@@ -14,6 +14,7 @@ RUN apt-get update && \
         g++ \
         make \
         cmake \
+        curl \
         git \
         zlib1g-dev \
         automake \
