--- a/whisper/Dockerfile.torch
+++ b/whisper/Dockerfile.torch
@@ -1,7 +1,7 @@
 FROM python:3.9
 LABEL maintainer="contact@linto.ai, jlouradour@linagora.com, dgaynullin@linagora.com"
 
-RUN apt-get update && apt-get install -y --no-install-recommends ffmpeg
+RUN apt-get update && apt-get install -y --no-install-recommends ffmpeg curl
 
 # Install python dependencies
 COPY whisper/requirements.torch.txt ./
