change websocket healthcheck + add netcat in dockers
Signed-off-by: AudranBert <bert.audran@gmail.com>

--- a/kaldi/Dockerfile
+++ b/kaldi/Dockerfile
@@ -15,6 +15,7 @@ RUN apt-get update && \
         make \
         cmake \
         curl \
+        netcat-traditional \
         git \
         zlib1g-dev \
         automake \
