--- a/whisper/Dockerfile.ctranslate2.cpu
+++ b/whisper/Dockerfile.ctranslate2.cpu
@@ -1,7 +1,7 @@
 FROM python:3.9
 LABEL maintainer="contact@linto.ai, jlouradour@linagora.com, abert@linagora.com"
 
-RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends ffmpeg git curl
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends ffmpeg git curl netcat
 
 # Install python dependencies
 COPY whisper/requirements.ctranslate2.txt ./
