fix language error message + small changes
Signed-off-by: AudranBert <bert.audran@gmail.com>

--- a/whisper/.envdefault
+++ b/whisper/.envdefault
@@ -10,7 +10,7 @@ SERVICES_BROKER=redis://172.17.0.1:6379
 BROKER_PASS=
 
 # HTTP PARAMETERS
-ENABLE_STREAMING=true
+ENABLE_STREAMING=false
 
 # WEBSOCKET PARAMETERS
 STREAMING_PORT=80
