kaldi: enhance dockerfile with runtime uid/gid flexibility

--- a/kaldi/Dockerfile
+++ b/kaldi/Dockerfile
@@ -23,6 +23,7 @@ RUN apt-get update && \
         libtool \
         pkg-config \
         ca-certificates \
+        gosu \
     && rm -rf /var/lib/apt/lists/*
 
 # Build vosk-kaldi
