--- a/nemo/requirements.txt
+++ b/nemo/requirements.txt
@@ -17,11 +17,28 @@ auditok<0.3.0
 torchaudio
 huggingface_hub<0.24
 
-# huggingface_hub<0.24
+# hydra-core>1.3,<=1.3.2
+# cloudpickle
+# fiddle
+# hydra-core>1.3,<=1.3.2
+# lightning>2.2.1,<=2.4.0
+# omegaconf<=2.3
+# peft
+# torchmetrics>=0.11.0
+# # transformers>=4.48.0,<=4.48.3
+# transformers
+# lhotse
+# wandb
+# webdataset>=0.2.86
+# braceexpand
+# editdistance
+# einops
+# g2p_en
+# jiwer
 # kaldi-python-io
 # kaldiio
 # lhotse>=1.26.0
-# librosa>=0.10.2
+# librosa>=0.10.1
 # marshmallow
 # optuna
 # packaging
@@ -33,33 +50,4 @@ huggingface_hub<0.24
 # ruamel.yaml
 # scipy>=0.14
 # soundfile
-
-# texterrors
-# braceexpand
-# editdistance
-# einops
-# g2p_en
-# jiwer
-# datasets==2.19.0
-# inflect
-# mediapy==1.1.6
-# pandas
-# sacremoses>=0.0.43
-# sentencepiece<1.0.0
-# numba
-# onnx>=1.7.0
-# protobuf==3.20.3
-# python-dateutil
-# scikit-learn
-# setuptools>=70.0.0
-# tensorboard
-# text-unidecode
-# torch
-# tqdm>=4.41.0
-# wget
-# wrapt
-# matplotlib
-# pesq
-# pystoi
-# 
-# hydra
+# sentencepiece
