--- a/whisper/Dockerfile.ctranslate2.cpu
+++ b/whisper/Dockerfile.ctranslate2.cpu
@@ -13,7 +13,7 @@ COPY http_server /usr/src/app/http_server
 COPY websocket /usr/src/app/websocket
 COPY document /usr/src/app/document
 COPY whisper/stt /usr/src/app/stt
-COPY whisper/docker-entrypoint.sh wait-for-it.sh healthcheck.sh heartbeat.sh heartbeat.json ./
+COPY whisper/docker-entrypoint.sh wait-for-it.sh healthcheck.sh ./
 COPY test/bonjour.wav /usr/src/app/test/bonjour.wav
 
 ENV PYTHONPATH="${PYTHONPATH}:/usr/src/app/stt"
