--- a/nemo/requirements.txt
+++ b/nemo/requirements.txt
@@ -1,3 +1,4 @@
+packaging==24.0
 numpy==1.26.4
 typing_extensions
 celery[redis,auth,msgpack]>=4.4.7
@@ -15,8 +16,12 @@ wavio>=0.0.4
 websockets
 auditok<0.3.0
 torchaudio
-huggingface_hub<0.24
+huggingface_hub
+sox
+nemo_toolkit[asr]==2.3.0
+cuda-python>=12.3
 
+# transformers==4.10.0
 # hydra-core>1.3,<=1.3.2
 # cloudpickle
 # fiddle
