--- a/nemo/requirements.txt
+++ b/nemo/requirements.txt
@@ -20,40 +20,4 @@ huggingface_hub
 sox
 nemo_toolkit[asr]==2.3.0
 cuda-python>=12.3
-hf_xet
-
-# transformers==4.10.0
-# hydra-core>1.3,<=1.3.2
-# cloudpickle
-# fiddle
-# hydra-core>1.3,<=1.3.2
-# lightning>2.2.1,<=2.4.0
-# omegaconf<=2.3
-# peft
-# torchmetrics>=0.11.0
-# # transformers>=4.48.0,<=4.48.3
-# transformers
-# lhotse
-# wandb
-# webdataset>=0.2.86
-# braceexpand
-# editdistance
-# einops
-# g2p_en
-# jiwer
-# kaldi-python-io
-# kaldiio
-# lhotse>=1.26.0
-# librosa>=0.10.1
-# marshmallow
-# optuna
-# packaging
-# pyannote.core
-# pyannote.metrics
-# pydub
-# pyloudnorm
-# resampy
-# ruamel.yaml
-# scipy>=0.14
-# soundfile
-# sentencepiece
+hf_xet # to speedup downloads from HuggingFace
