--- a/punctuation/requirements.txt
+++ b/punctuation/requirements.txt
@@ -5,6 +5,6 @@ flask-swagger-ui==3.36.0
 gevent>=22.10.2
 gunicorn>=20.1.0
 transformers==4.39.3
-# git+https://github.com/benob/mosestokenizer.git@169bd3a504fe20a3e51b9a7af3f0ca359c2d36c9
 tokenizers==0.15.2
+torch>=2.3.1
 regex==2023.12.25
