--- a/whisper/Dockerfile.ctranslate2
+++ b/whisper/Dockerfile.ctranslate2
@@ -1,5 +1,5 @@
 FROM ghcr.io/opennmt/ctranslate2:latest-ubuntu20.04-cuda12.2
-LABEL maintainer="contact@linto.ai, jlouradour@linagora.com, abert@linagora.com"
+LABEL maintainer="contact@linto.ai"
 
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends ffmpeg git curl netcat-traditional gosu
 
