Fix versions of package to avoid bad surprises

--- a/nemo/requirements.txt
+++ b/nemo/requirements.txt
@@ -1,17 +1,17 @@
+celery[redis,auth,msgpack]==5.5.1
+flask==3.0.3
+flask-cors==5.0.0
+flask-sock==0.7.0
+flask-swagger-ui==3.36.0
+gevent==24.2.1
+gunicorn==23.0.0
+lockfile==0.12.2
+pyyaml==6.0.2
+requests==2.32.3
+regex
 packaging==24.0
 numpy==1.26.4
 typing_extensions
-celery[redis,auth,msgpack]>=4.4.7
-flask>=1.1.2
-flask-cors>=3.0.10
-flask-sock
-flask-swagger-ui==3.36.0
-gevent
-gunicorn
-lockfile
-pyyaml>=5.4.1
-regex
-requests>=2.26.0
 wavio>=0.0.4
 websockets
 auditok<0.3.0
