--- a/kaldi/requirements.txt
+++ b/kaldi/requirements.txt
@@ -1,12 +1,12 @@
-celery[redis,auth,msgpack]>=4.4.7
-numpy>=1.18.5
-flask>=1.1.2
-flask-cors>=3.0.10
+celery[redis,auth,msgpack]==5.5.1
+flask==3.0.3
+flask-cors==5.0.0
+flask-sock==0.7.0
 flask-swagger-ui==3.36.0
-flask-sock
-gevent
-gunicorn
-pyyaml>=5.4.1
+gevent==24.2.1
+gunicorn==23.0.0
+pyyaml==6.0.2
+requests==2.32.3
+numpy>=1.18.5
 wavio>=0.0.4
-requests>=2.26.0
 websockets
