--- a/whisper/requirements.ctranslate2.txt
+++ b/whisper/requirements.ctranslate2.txt
@@ -1,17 +1,17 @@
-celery[redis,auth,msgpack]>=4.4.7
-flask>=1.1.2
-flask-cors>=3.0.10
-flask-sock
+celery[redis,auth,msgpack]==5.5.1
+flask==3.0.3
+flask-cors==5.0.0
+flask-sock==0.7.0
 flask-swagger-ui==3.36.0
-gevent
-gunicorn
-lockfile
-pyyaml>=5.4.1
+gevent==24.2.1
+gunicorn==23.0.0
+lockfile==0.12.2
+pyyaml==6.0.2
+requests==2.32.3
 regex
-requests>=2.26.0
-wavio>=0.0.4
-websockets
-auditok<0.3.0
+wavio==0.0.9
+websockets==13.1
+auditok==0.2.0
 # faster_whisper==1.1.0
 # vvv This is version faster_whisper==1.1.0 + option for (persistent) prompt + fix for large-v3 (and turbo) models
 git+https://github.com/linto-ai/faster-whisper.git
