remake nemo readme

--- a/nemo/.envdefault_streaming
+++ b/nemo/.envdefault_streaming
@@ -36,6 +36,7 @@ VAD=false
 STREAMING_MIN_CHUNK_SIZE=1
 STREAMING_BUFFER_TRIMMING_SEC=10
 STREAMING_PAUSE_FOR_FINAL=2
+# STREAMING_TIMEOUT_FOR_SILENCE=1.5
 STREAMING_MAX_WORDS_IN_BUFFER=4
 STREAMING_MAX_PARTIAL_ACTUALIZATION_PER_SECOND=4
 
