--- a/nemo/.envdefault
+++ b/nemo/.envdefault
@@ -9,47 +9,50 @@ SERVICE_NAME=stt
 SERVICES_BROKER=redis://172.17.0.1:6379
 BROKER_PASS=
 
-# HTTP PARAMETERS
-ENABLE_STREAMING=false
-
-# WEBSOCKET PARAMETERS
+# Below: used when SERVICE_MODE=websocket
 STREAMING_PORT=80
 
 ############################################
 # STT MODELING PARAMETERS
 ############################################
 
-MODEL=linagora/linto_stt_fr_fastconformer
-ARCHITECTURE=hybrid_bpe
+MODEL=nvidia/parakeet-rnnt-0.6b
+ARCHITECTURE=rnnt_bpe
 
-# MODEL=nvidia/stt_fr_conformer_ctc_large
-# ARCHITECTURE=ctc_bpe
+# MODEL=linagora/linto_stt_fr_fastconformer
+# ARCHITECTURE=hybrid_bpe
+# For streaming only:
+# PUNCTUATION_MODEL=
 
 # MODEL=nvidia/stt_fr_fastconformer_hybrid_large_pc
 # ARCHITECTURE=hybrid_bpe
 
-# MODEL=nvidia/stt_en_fastconformer_hybrid_medium_streaming_80ms_pc
-# ARCHITECTURE=hybrid_bpe
+VAD=auditok
+VAD_DILATATION=0.5                # Time to add before and after the detected speech
+VAD_MIN_SPEECH_DURATION=0.1       # Minimum duration of speech to keep
+VAD_MIN_SILENCE_DURATION=0.1      # Minimum duration of silence to keep
 
-# MODEL=nvidia/parakeet-rnnt-0.6b
-# ARCHITECTURE=rnnt_bpe
+############################################
+# FILE TRANSCRIPTION (HTTP and TASK MODES)
+############################################
 
-# PUNCTUATION_MODEL=/opt/models/lm/fr.24000
-
+# These models can't handle files that are too long, so it must be split if too long
 # 480s=8min. A file longer than that will be split into smaller parts. This value depends on your VRAM/RAM amount
 LONG_FILE_THRESHOLD=480
-# 240s=4min. Size of the parts into which the audio is splitted. This value depends on your VRAM/RAM amount
-LONG_FILE_CHUNK_LEN=240
+# 360s=6min. Size of the parts into which the audio is splitted. This value depends on your VRAM/RAM amount
+LONG_FILE_CHUNK_LEN=360
 # 10s of context at the begining and end of each chunk
 LONG_FILE_CHUNK_CONTEXT_LEN=10
 
-VAD=false
+############################################
+# STREAMING PARAMETERS (WEBSOCKET MODE)
+############################################
 
-# Streaming parameters
-STREAMING_MIN_CHUNK_SIZE=1
+STREAMING_MIN_CHUNK_SIZE=0.5
 STREAMING_BUFFER_TRIMMING_SEC=10
-STREAMING_PAUSE_FOR_FINAL=2
-STREAMING_MAX_WORDS_IN_BUFFER=4
+STREAMING_PAUSE_FOR_FINAL=2.0
+STREAMING_TIMEOUT_FOR_SILENCE=
+STREAMING_MAX_WORDS_IN_BUFFER=5
 STREAMING_MAX_PARTIAL_ACTUALIZATION_PER_SECOND=4
 
 ############################################
@@ -57,7 +60,7 @@ STREAMING_MAX_PARTIAL_ACTUALIZATION_PER_SECOND=4
 ############################################
 
 # Device to use. It can be "cuda" to force/check GPU, "cpu" to force computation on CPU, or a specific GPU ("cuda:0", "cuda:1", ...)
-DEVICE=cpu
+DEVICE=
 
 # NVIDIA_VISIBLE_DEVICES=0
 # NVIDIA_DRIVER_CAPABILITIES=all
@@ -65,7 +68,14 @@ DEVICE=cpu
 # CUDA_VISIBLE_DEVICES=0
 
 # Number of threads per worker when running on CPU
-NUM_THREADS=4
+NUM_THREADS=
 
-# Number of workers minus one (all except from the main one)
-CONCURRENCY=2
+# Number of workers minus one (all except from the main one), for http and task modes
+CONCURRENCY=0
+
+############################################
+# USERS AND GROUPS
+############################################
+
+USER_ID=1000
+GROUP_ID=1000
