--- a/nemo/.envdefault
+++ b/nemo/.envdefault
@@ -16,7 +16,7 @@ STREAMING_PORT=80
 # STT MODELING PARAMETERS
 ############################################
 
-MODEL=nvidia/parakeet-rnnt-0.6b
+MODEL=nvidia/parakeet-tdt-0.6b-v2
 ARCHITECTURE=rnnt_bpe
 
 # MODEL=linagora/linto_stt_fr_fastconformer
@@ -37,12 +37,12 @@ VAD_MIN_SILENCE_DURATION=0.1      # Minimum duration of silence to keep
 ############################################
 
 # These models can't handle files that are too long, so it must be split if too long
-# 480s=8min. A file longer than that will be split into smaller parts. This value depends on your VRAM/RAM amount
-LONG_FILE_THRESHOLD=480
+# 540s=9mins. A file longer than that will be split into smaller parts. This value depends on your VRAM/RAM amount
+LONG_FILE_THRESHOLD=540
 # 360s=6min. Size of the parts into which the audio is splitted. This value depends on your VRAM/RAM amount
 LONG_FILE_CHUNK_LEN=360
-# 10s of context at the begining and end of each chunk
-LONG_FILE_CHUNK_CONTEXT_LEN=10
+# 5s of context at the begining and end of each chunk
+LONG_FILE_CHUNK_CONTEXT_LEN=5
 
 ############################################
 # STREAMING PARAMETERS (WEBSOCKET MODE)
@@ -71,7 +71,7 @@ DEVICE=
 NUM_THREADS=
 
 # Number of workers minus one (all except from the main one), for http and task modes
-CONCURRENCY=0
+CONCURRENCY=1
 
 ############################################
 # USERS AND GROUPS
